test/error/StSwitchCaseFallthrough.fu
public static class Test
{
	public static bool Run()
	{
		int x = 42;
		switch (x) {
		case 42:
			x++; //ERROR: 'case' must end with 'break', 'continue', 'return' or 'throw'
		default:
			return false;
		}
	}
}
